fix: dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@
   --font-inter:"Inter";
   --footer-gray: #D9D9D9;
   --font-Silkscreen:"Silkscreen";
-  --font-press-start: "Press Start 2P"
+  
 }
 
 
